--- a/style.css
+++ b/style.css
@@ -10,17 +10,20 @@ a:hover { color: #BE3F1C; }
 h1 { font-weight: bold; font-size: 1.25em; }
 h1, p { margin-bottom: 15px; line-height: 20px; }
 
-body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 100%; }
+body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 100%; position: absolute; }
 
 
 
 /* Mobile nav not visible by desktop browsers but only set to visiblity hidden so jQuery can still detect the height of it 
 -------------------------------------------------------------------------------------------------------------------------------------- */
-#mobile { visibility: hidden; background: #21BBE1; position: fixed; z-index: 100; width: 100%; }
+#mobile { visibility: hidden; background: #1B8AA5; position: fixed; z-index: 100; width: 100%; }
 #mobile ul { margin: 0; }  
 #mobile ul li { width: 50%; float: left; }  
 #mobile a { color: #fff; padding: 15px 1.5em; display: block; border-bottom: 1px solid rgba(255, 255, 255, 0.25); text-decoration: none; text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25); white-space: nowrap; text-overflow: ellipsis; overflow: hidden; } 
 #mobile li:nth-of-type(2n-1) a { border-right: 1px solid rgba(255, 255, 255, 0.25); } 
+#mobile a { background: #21BBE1; }
+#mobile > ul > li > a { background: #1B8AA5; border: 1px solid rgba(255, 255, 255, 0.25); } 
+#mobile li li a { font-size: 75%; padding: 17px 1.5em; } 
 /* ----------------------------------------------------------------------------------------------------------------------------------- */
 
 
@@ -37,6 +40,14 @@ nav#main li:last-of-type { border-right: none; }
     box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.4);
 }
 
+/* Carbon Ad  
+-------------------------------------------------------------------------------------------------------------------------------------- */
+.carbonad { margin-bottom: 20px; width: auto !important; padding: 0 15px 0 0 !important; border: none !important; background: #f7f7f7 !important; height: auto !important; position: relative; }
+.carbonad-image { margin: 0 15px 0 0 !important; }
+.carbonad-text, .carbonad-tag { text-align: left !important; float: none !important; width: auto !important; }
+.carbonad-text { position: relative; top: 15px; padding-right: 15px !important; }
+.carbonad-tag { position: absolute; bottom: 5px; right: 5px; width: 100px; }
+/* ----------------------------------------------------------------------------------------------------------------------------------- */					
 
 /*
 Media Query Goodness --------------------------------------------------------------------------------------------------------------------
@@ -49,6 +60,11 @@ Media Query Goodness -----------------------------------------------------------
 	/* Make the mobile nav visible for mobile widths */
 	#mobile { visibility: visible; }
 
+  /* Add the "Scrolling Up for Navigation" bar, all controlled via CSS including the text */
+	header:before { content: "Scrolling Up for Navigation"; 
+		width: 100%; display: block; padding: 0.75em 1.5em; margin: -1em -1.5em 1em; color: #878787; text-shadow: 0 1px 1px rgba(255, 255, 255, 1); border-bottom: 1px solid #a6a6a6; background-origin: content-box; text-indent: 22px;
+		background: #e3e3e3 url(images/pull.png) right center no-repeat;
+	}	
 }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
